# libconfini

./: .anjuta_sym_db.db  .editorconfig  AUTHORS  ChangeLog  INSTALL  MAN.md  MANUAL.md  Makefile.am  NEWS  RATIONALE.md  README  README.md  autogen.sh  bootstrap  configure.ac  docs.dox  doxyfile  doxygen.conf  dpi.dox  libconfini.md  makedoc.sh  mgwmake.bat  msvcmake.bat  package.json
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
autostuff/: ChangeLog.md
autostuff/chunks/: revision-warning.c
autostuff/doxygen/: doxyfile.conf  dpi.dox  hacking.md  rationale.md
autostuff/m4/: not-autotools.m4
autostuff/shadows/: package.json.in
autostuff/shadows/dev/hackings/all/: confini-metadata.c.in  confini-metadata.h.in
autostuff/shadows/src/: winres-ac.rc.in  winres.rc.in
dev/: README.md
dev/docs/: baremetal.md  mainpage.md  manual.md  rationale.md
dev/hackings/all/: confini-metadata.c  confini-metadata.h
dev/hackings/baremetal/: README.md  c-standard-library.h  confini-header.c  number-parsers.c  number-parsers.h  pp-utils.c  str2num.c
dev/marked-sources/: confini-marked.c  confini-marked.h
dev/tests/null-byte_injection/: null-byte_injection.c  null-byte_injection.sh
dev/tests/performance/: performance.c  prepare.sh  sprepare.sh_  unprepare.sh
dev/tests/playground/: extreme_ini.conf  playground.c  playground.sh
doc/html/: MAN_8md.html  README_8md.html  annotated.html  confini_8c.html  confini_8h.html  confini_8h_source.html  files.html  functions_vars.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  pages.html  structIniDispatch.html  structIniFormat-members.html  structIniFormat.html  structIniStatistics-members.html  structIniStatistics.html
doc/html/search/: all_0.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  defines_0.js  functions_3.js  functions_5.js  searchdata.js  typedefs_0.js  variables_0.js  variables_3.js  variables_6.js  variables_7.js  variables_a.js  variables_c.js
doc/man/man3/: confini.h.3  libconfini.3
docs/: index.html  libconfini.html  manual.html
docs/html/: ChangeLog_8md.html  MANUAL_8md.html  MAN_8md.html  RATIONALE_8md.html  README_8md.html  annotated.html  baremetal.html  baremetal_8md.html  changelog.html  classes.html  confini_8c.html  confini_8h.html  confini_8h_source.html  deprecated.html  develop.html  develop_8md.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  docs_8dox.html  doxygen.css  dpi_8dox.html  files.html  fnoverview.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  hacking.html  hacking_8md.html  index.html  install.html  install_8md.html  libconfini.html  libconfini_8md.html  mainpage_8md.html  menudata.js  (+10 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+24 more)
docs/man/man3/: IniDispatch.3  IniFormat.3  IniStatistics.3  confini.h.3  libconfini.3
examples/: ambiguous.conf  bad_ini.conf  compile_basic_example_c.sh  compile_example.sh  compile_typed_ini_c.sh  example.c  example.conf  hash_table.conf  run-example.sh  run_example.sh  typed_ini.c  typed_ini.conf
examples/cplusplus/: generic.cpp  map.cpp  map.hpp
examples/ini_files/: ambiguous.conf  colon_as_delimiter.conf  delivery.conf  example.conf  extreme_ini.conf  hash_table.conf  log.ini  self_explaining.conf  toml-like.conf  typed_ini.conf  unix-like.conf
examples/miscellanea/: basic_example.c  colon_as_delimiter.c  disambiguate.c  dispatch_everything.c  glib_hash_table.c  parse_foreign.c  print_format.c  stats_only.c  toml-like.c  typed_ini.c
examples/other/: basic_example.c  typed_ini.c
examples/topics/: highlight.css  ini_array_break.c  ini_array_collapse.c  ini_array_foreach.c  ini_array_release.c  ini_array_shift.c  ini_array_split.c  ini_collapse_array.c  ini_global_set_implicit_value.c  ini_set_implicit_value.c  ini_string_match_si.c  ini_string_parse.c  ini_unquote.c  load_ini_file.c  load_ini_path.c  strip_ini_cache.c
examples/utilities/: clone_ini_dispatch.h  ini_string_preparse.h  load_ini_buffer.h  make_strarray.h
po/: POTFILES.in
src/: Makefile.am  confini-0.9.pc.in  confini-1.0.pc.in  confini-1.1.pc.in  confini-1.2.pc.in  confini-1.4.pc.in  confini-1.5.pc.in  confini-1.6.pc.in  confini-1.7.pc.in  confini.c  confini.h  libconfini-1.8.pc.in  libconfini.def  libconfini.pc.in  winres.rc
tests/: Makefile.am  autotest.c
tests/null-byte_injection/: null-byte_injected.c  null-byte_injected.conf
tests/performance/: performance.c  prepare.sh  sprepare.sh  unprepare.sh
